--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -71,7 +71,8 @@
 
 .scroll-item {
   flex-shrink: 0;
-  animation: scroll 20s linear infinite; /* Adjust the duration as needed */
+  animation: scroll 20s linear infinite;
+  animation-direction: alternate-reverse; /* Adjust the duration as needed */
   margin-right: 10px; /* Adjust margin as needed */
 }
 
