--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -1,6 +1,6 @@
 .main__bg {
-  background-color:  white ,; /* For browsers that do not support gradients */
-  background-image: linear-gradient( #ffbeda , white);
+  background-color: white; /* For browsers that do not support gradients */
+  background-image: linear-gradient(#ffbeda, white);
   animation: changeGradient 15s ease-in-out infinite;
   top: 0;
   bottom: 0;
@@ -22,34 +22,21 @@
 @keyframes changeGradient {
   0%,
   100% {
-    background-image: linear-gradient(
-      #ffda91 0%,
-      #fff 100%
-    );
+    background-image: linear-gradient(#ffda91 0%, #fff 100%);
   }
 
   25% {
-    background-image: linear-gradient(
-      #ffbeda 0%,
-      #fff 100%
-    );
+    background-image: linear-gradient(#ffbeda 0%, #fff 100%);
   }
 
   50% {
-    background-image: linear-gradient(
-      #b8d9fd 0%,
-      #fff 100%
-    );
+    background-image: linear-gradient(#b8d9fd 0%, #fff 100%);
   }
 
   75% {
-    background-image: linear-gradient(
-      #daadfa 0%,
-      #fff 100%
-    );
+    background-image: linear-gradient(#daadfa 0%, #fff 100%);
   }
 }
-
 
 .scroll-container {
   display: flex;
@@ -63,9 +50,7 @@
     transform: translateX(calc(100% * 12)); /* Number of clients in your list */
   }
   100% {
-    transform: translateX(
-      calc(-100% * 12)
-    );
+    transform: translateX(calc(-100% * 12));
   }
 }
 
@@ -83,3 +68,45 @@
   object-fit: cover;
   border-radius: 8px; /* Add border-radius for rounded corners */
 }
+
+.button {
+  min-width: 150px;
+  max-width: 250px;
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+}
+.button.button--aylen {
+	-webkit-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.button--aylen::before,
+.button--aylen::after {
+	content: '';
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	bottom: 100%;
+	left: 0;
+	z-index: -1;
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: transform 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+.button--aylen::before {
+	background: #a0aec0;
+}
+.button--aylen::after {
+	background: #4a5568;
+}
+.button--aylen:hover::before,
+.button--aylen:hover::after {
+	-webkit-transform: translate3d(0, 100%, 0);
+	transform: translate3d(0, 100%, 0);
+}
+.button--aylen:hover::after {
+	-webkit-transition-delay: 0.175s;
+	transition-delay: 0.175s;
+}
+
