--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300&family=Poppins:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Montserrat:ital,wght@0,300;0,400;1,300&family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,800&family=Poppins:wght@300;400&family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Montserrat:ital,wght@0,300;0,400;1,300&family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,800&family=Poppins:wght@300;400&family=Roboto&family=Roboto+Slab:wght@300;400&display=swap');
 .main__bg {
   background-color: white; /* For browsers that do not support gradients */
-  background-image: linear-gradient(#ffda91 0%, white);
+  background-image: url('https://www.pickcel.com/assets/img/bg/industry-bg.png');
   /* animation: changeGradient 15s ease-in-out infinite; */
   top: 0;
   bottom: 0;
   left: -50%;
   right: -50%;
-  opacity: 0.9;
+  opacity: 0.9;  
   z-index: 1;
 }
 
@@ -112,7 +113,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 body {
-  font-family: "Mulish";
+  /* font-family: "Mulish"; */
+  font-family: '/CentraNo2.otf';
   overflow-x: hidden;
 }
 
@@ -127,7 +129,7 @@ body {
   color: #fff;
   font-size: 50px;
 }
-
+/* 
 .area {
   background: #171717;
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
@@ -226,7 +228,7 @@ body {
   height: 150px;
   animation-delay: 0s;
   animation-duration: 11s;
-}
+} */
 
 @keyframes animate {
   0% {
