--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -4,6 +4,8 @@
 .main__bg {
   background-color: white; /* For browsers that do not support gradients */
   background-image: url("https://www.pickcel.com/assets/img/bg/industry-bg.png");
+  background-size: cover;
+  
   /* animation: changeGradient 15s ease-in-out infinite; */
   top: 0;
   bottom: 0;
