--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -118,7 +118,7 @@
 
 body {
   /* font-family: "Mulish"; */
-  font-family: 'Centra No2';
+  font-family: "Centra No2";
   overflow-x: hidden;
 }
 
