--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300&family=Poppins:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Montserrat:ital,wght@0,300;0,400;1,300&family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,800&family=Poppins:wght@300;400&family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Montserrat:ital,wght@0,300;0,400;1,300&family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,800&family=Poppins:wght@300;400&family=Roboto&family=Roboto+Slab:wght@300;400&display=swap");
+
 .main__bg {
-  background-color: white; /* For browsers that do not support gradients */
+  background-color: white;
   background-image: url("https://www.pickcel.com/assets/img/bg/industry-bg.png");
   background-size: cover;
   background-position: center;
@@ -52,7 +53,7 @@
 
 @keyframes scroll {
   0% {
-    transform: translateX(calc(100% * 12)); /* Number of clients in your list */
+    transform: translateX(calc(100% * 12));
   }
   100% {
     transform: translateX(calc(-100% * 12));
@@ -62,8 +63,8 @@
 .scroll-item {
   flex-shrink: 0;
   animation: scroll 20s linear infinite;
-  animation-direction: alternate-reverse; /* Adjust the duration as needed */
-  margin-right: 10px; /* Adjust margin as needed */
+  animation-direction: alternate-reverse;
+  margin-right: 10px;
 }
 
 .scroll-item img {
@@ -71,7 +72,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 8px; /* Add border-radius for rounded corners */
+  border-radius: 8px;
 }
 
 .button {
@@ -122,6 +123,15 @@ body {
   overflow-x: hidden;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 .context {
   width: 100%;
   position: absolute;
@@ -131,9 +141,10 @@ body {
 .context h1 {
   text-align: center;
   color: #fff;
-  font-size: 50px;
-}
 
+  font-size: 50px;
+  
+}
 
 /* 
 .circles {
@@ -143,107 +154,49 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  border: 1px solid black;
 }
 
 .circles li {
   position: absolute;
   display: block;
   list-style: none;
-  width: 20px;
-  height: 20px;
-  background: rgba(164, 22, 22, 0.494);
+  background: linear-gradient(113deg, #fd0036 24.5%, #ffa800);
   animation: animate 25s linear infinite;
-  bottom: -150px;
+  top: 150px;
+  opacity: 0.5;
 }
 
 .circles li:nth-child(1) {
-  left: 25%;
-  width: 80px;
-  height: 80px;
+  left: 55%;
+  width: 1100px;
+  height: 1100px;
   animation-delay: 0s;
+  opacity: 0;
 }
 
 .circles li:nth-child(2) {
   left: 10%;
-  width: 20px;
-  height: 20px;
+  width: 00px;
+  height: 700px;
   animation-delay: 2s;
   animation-duration: 12s;
-}
+} */
 
-.circles li:nth-child(3) {
-  left: 70%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(4) {
-  left: 40%;
-  width: 60px;
-  height: 60px;
-  animation-delay: 0s;
-  animation-duration: 18s;
-}
-
-.circles li:nth-child(5) {
-  left: 65%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(6) {
-  left: 75%;
-  width: 110px;
-  height: 110px;
-  animation-delay: 3s;
-}
-
-.circles li:nth-child(7) {
-  left: 35%;
-  width: 150px;
-  height: 150px;
-  animation-delay: 7s;
-}
-
-.circles li:nth-child(8) {
-  left: 50%;
-  width: 25px;
-  height: 25px;
-  animation-delay: 15s;
-  animation-duration: 45s;
-}
-
-.circles li:nth-child(9) {
-  left: 20%;
-  width: 15px;
-  height: 15px;
-  animation-delay: 2s;
-  animation-duration: 35s;
-}
-
-.circles li:nth-child(10) {
-  left: 85%;
-  width: 150px;
-  height: 150px;
-  animation-delay: 0s;
-  animation-duration: 11s;
-}
 
 @keyframes animate {
   0% {
-    transform: translateY(0) rotate(0deg);
-    opacity: 90;
+    transform: rotate(0deg);
+    opacity: 0;
     border-radius: 0;
   }
 
   100% {
-    transform: translateY(-1000px) rotate(720deg);
-    opacity: 90;
+    transform: rotate(360deg);
+    opacity: 100;
     border-radius: 20%;
   }
-} */
+}
 
 .dropbtn {
   font-size: 16px;
@@ -322,16 +275,16 @@ body {
 }
 
 .dropdown:not(:hover) .dropdown-content1 {
-  transition-delay: 1s; /* Add a delay before hiding */
-  display: none; /* Initially hide the dropdown-content */
+  transition-delay: 1s;
+  display: none;
 }
 .dropdown:not(:hover) .dropdown-content2 {
-  transition-delay: 1s; /* Add a delay before hiding */
-  display: none; /* Initially hide the dropdown-content */
+  transition-delay: 1s;
+  display: none;
 }
 .dropdown:not(:hover) .dropdown-content3 {
-  transition-delay: 1s; /* Add a delay before hiding */
-  display: none; /* Initially hide the dropdown-content */
+  transition-delay: 1s;
+  display: none;
 }
 
 @keyframes animatedrop {
@@ -355,5 +308,23 @@ body {
 
   to {
     width: 50%;
+  }
+}
+
+#navbar-toggle {
+  position: relative;
+  right: 0;
+  height: 0;
+  background-color: #fff;
+  animation: toggle 0.7s ease forwards;
+  z-index: 2;
+}
+
+@keyframes toggle {
+  0% {
+    right: -400px;
+  }
+  100% {
+    right: 0;
   }
 }
