--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -6,14 +6,10 @@
   background-image: url("https://www.pickcel.com/assets/img/bg/industry-bg.png");
   background-size: cover;
   background-position: center;
-  /* animation: changeGradient 15s ease-in-out infinite; */
-  top: 0;
-  bottom: 0;
-  left: -50%;
-  right: -50%;
   opacity: 0.9;
   z-index: 1;
   overflow: hidden;
+  position: relative;
 }
 
 .layer1 {
@@ -24,25 +20,6 @@
 .layer2 {
   animation-duration: 15s;
 }
-
-/* @keyframes changeGradient {
-  0%,
-  100% {
-    background-image: linear-gradient(#ffda91 0%, #fff 100%);
-  }
-
-  25% {
-    background-image: linear-gradient(#ffbeda 0%, #fff 100%);
-  }
-
-  50% {
-    background-image: linear-gradient(#b8d9fd 0%, #fff 100%);
-  }
-
-  75% {
-    background-image: linear-gradient(#daadfa 0%, #fff 100%);
-  }
-} */
 
 .scroll-container {
   display: flex;
@@ -134,106 +111,6 @@ body {
   color: #fff;
   font-size: 50px;
 }
-/* 
-.area {
-  background: #171717;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-}
-
-.circles {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.circles li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  width: 20px;
-  height: 20px;
-  background: rgba(255, 255, 255, 0.2);
-  animation: animate 25s linear infinite;
-  bottom: -150px;
-}
-
-.circles li:nth-child(1) {
-  left: 25%;
-  width: 80px;
-  height: 80px;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(2) {
-  left: 10%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 2s;
-  animation-duration: 12s;
-}
-
-.circles li:nth-child(3) {
-  left: 70%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(4) {
-  left: 40%;
-  width: 60px;
-  height: 60px;
-  animation-delay: 0s;
-  animation-duration: 18s;
-}
-
-.circles li:nth-child(5) {
-  left: 65%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(6) {
-  left: 75%;
-  width: 110px;
-  height: 110px;
-  animation-delay: 3s;
-}
-
-.circles li:nth-child(7) {
-  left: 35%;
-  width: 150px;
-  height: 150px;
-  animation-delay: 7s;
-}
-
-.circles li:nth-child(8) {
-  left: 50%;
-  width: 25px;
-  height: 25px;
-  animation-delay: 15s;
-  animation-duration: 45s;
-}
-
-.circles li:nth-child(9) {
-  left: 20%;
-  width: 15px;
-  height: 15px;
-  animation-delay: 2s;
-  animation-duration: 35s;
-}
-
-.circles li:nth-child(10) {
-  left: 85%;
-  width: 150px;
-  height: 150px;
-  animation-delay: 0s;
-  animation-duration: 11s;
-} */
 
 @keyframes animate {
   0% {
@@ -363,6 +240,13 @@ body {
 }
 
 
+.ripple-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 
 
