--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -242,10 +242,9 @@ body {
 
 .ripple-background {
   position: absolute;
-  top: 0;
+  top: 100%;
   left: 0;
-  width: 100%;
-  height: 100%;
+
 }
 
 
