--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -214,7 +214,23 @@ body {
   transition-delay: 1s; /* Add a delay before hiding */
   display: none; /* Initially hide the dropdown-content */
 }
+#navbar-toggle {
+  position: relative;
+  right: 0;
+  height: 0;
+  background-color: #fff;
+  animation: toggle 0.7s ease forwards;
+  z-index: 2;
+}
 
+@keyframes toggle {
+  0% {
+    right: -400px;
+  }
+  100% {
+    right: 0;
+  }
+}
 @keyframes animatedrop {
   0% {
     top: 55px;
