--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Montserrat:ital,wght@0,300;0,400;1,300&family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,800&family=Poppins:wght@300;400&family=Roboto&family=Roboto+Slab:wght@300;400&display=swap");
 .main__bg {
   background-color: white; /* For browsers that do not support gradients */
-  /* background-image: url("https://www.pickcel.com/assets/img/bg/industry-bg.png"); */
+  background-image: url("https://www.pickcel.com/assets/img/bg/industry-bg.png");
   background-size: cover;
   background-position: center;
   opacity: 0.9;
