--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -320,7 +320,7 @@ body {
 }
 
 
-
+/* 
 @keyframes ripple{
   0%{
     transform: scale(0.8);
@@ -333,4 +333,4 @@ body {
   100%{
     transform: scale(0.8);
   }
-}
+} */
