--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -294,13 +294,13 @@ body {
   left: -300px;
   bottom: -300px;
 }
-
+/* 
 .xlarge{
   width: 800px;
   height: 800px;
   left: -400px;
   bottom: -400px;
-}
+} */
 
 
 
