--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -26,15 +26,14 @@
   overflow: hidden;
   justify-content: center;
   align-items: center;
-
 }
 
 @keyframes scroll {
   0% {
-    transform: translateX(calc(100% * 2)); /* Number of clients in your list */
+    transform: translateX(calc(100% * 5)); 
   }
   100% {
-    transform: translateX(calc(-100% * 2));
+    transform: translateX(calc(-100% * 5));
   }
 }
 
@@ -42,19 +41,16 @@
   height: 50px; /* Adjust the height to your preference */
 }
 .scroll-item {
-  flex-shrink: 0;
-  animation: scroll 15s linear infinite;
-  animation-direction: alternate-reverse; /* Adjust the duration as needed */
-  margin-right: 10px; /* Adjust margin as needed */
+  animation: scroll 20s linear infinite;
 }
 
-.scroll-item img {
+/* .scroll-item img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 8px; /* Add border-radius for rounded corners */
-}
+
 
 .button {
   z-index: 1;
@@ -226,6 +222,7 @@ body {
   animation: toggle 0.7s ease forwards;
   z-index: 2;
 }
+
 
 @keyframes toggle {
   0% {
